# hetzner-dns-api

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  docs.yml
src/hetzner_dns_api/: __init__.py  api.py  base.py  cli.py  decoding.py  records.py  types.py  zone.py
tests/: factories.py  test_api.py  test_records.py  test_types.py
