[project]
name = "hetzner-dns-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Allan Eising", email = "allan@eising.dk" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "httpx>=0.28.1",
    "msgspec>=0.19.0",
    "tabulate>=0.9.0",
]

[project.scripts]
hetzner-api = "hetzner_dns_api.cli:cli"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "faker>=37.8.0",
    "pytest>=8.4.2",
    "pytest-httpserver>=1.1.3",
]
